Fix ForeignKeyIndexTest jouniso 9 minutes ago